-
Bug
-
Resolution: Done
-
P1: Critical
-
5.5.0 Beta
-
None
-
Mac 10.8
-
fab077a8e7a7f09beff22f49f77bc1d8017fb91e
Download the latest Qt5.5.0 Mac offline installer (tested with build number 18). Install clang_64 binaries and try to compile Canvas3D examples.
Bug:
compile error 'RCC: Error in 'textureandlight.qrc': Cannot find file '../../../3rdparty/gl-matrix.js''
digia@sdk-mac:~/Qt5.5.0_ent_b18/Examples/Qt-5.5/canvas3d$ make cd textureandlight/ && ( test -e Makefile || /Users/digia/Qt5.5.0_ent_b18/5.5/clang_64/bin/qmake /Users/digia/Qt5.5.0_ent_b18/Examples/Qt-5.5/canvas3d/textureandlight/textureandlight.pro -o Makefile ) && make -f Makefile RCC: Error in 'textureandlight.qrc': Cannot find file '../../../3rdparty/gl-matrix.js' /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++ -c -pipe -O2 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.8.sdk -mmacosx-version-min=10.7 -Wall -W -fPIE -DQT_NO_DEBUG -DQT_QUICK_LIB -DQT_GUI_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I../../../include -I../../../../5.5/clang_64/lib/QtQuick.framework/Versions/5/Headers -I../../../../5.5/clang_64/lib/QtGui.framework/Versions/5/Headers -I../../../../5.5/clang_64/lib/QtQml.framework/Versions/5/Headers -I../../../../5.5/clang_64/lib/QtNetwork.framework/Versions/5/Headers -I../../../../5.5/clang_64/lib/QtCore.framework/Versions/5/Headers -I. -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.8.sdk/System/Library/Frameworks/OpenGL.framework/Versions/A/Headers -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.8.sdk/System/Library/Frameworks/AGL.framework/Headers -I../../../../5.5/clang_64/mkspecs/macx-clang -F/Users/digia/Qt5.5.0_ent_b18/5.5/clang_64/lib -o main.o main.cpp /Users/digia/Qt5.5.0_ent_b18/5.5/clang_64/bin/rcc -name textureandlight textureandlight.qrc -o qrc_textureandlight.cpp RCC: Error in 'textureandlight.qrc': Cannot find file '../../../3rdparty/gl-matrix.js' make[1]: *** [qrc_textureandlight.cpp] Error 1 make: *** [sub-textureandlight-make_first] Error 2
Note: not yet tested with other platforms as no suitable installers available.
For Gerrit Dashboard: QTBUG-45472 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
110564,4 | Fixes examples not compiling issue. | 5.5 | qt/qtcanvas3d | Status: MERGED | +2 | 0 |