Fixes examples not compiling issue.

Moved the 3rdparty folder containing the files needed by examples to the examples
directory so that the files are bundled with the Qt 5.5 release.

Change-Id: I544075c345efd329e853ae52dad31accfdfb388a
Task-number: QTBUG-45472
Reviewed-by: Pasi Keränen <pasi.keranen@digia.com>