examples/canvas3d/textureandlight/main.cpp
@@ -43,12 +43,12 @@
 int main(int argc, char *argv[])
 {
     //! [0]
-    // Turns on all logging of Canvas3D
-    QString loggingFilter = QString("qt.canvas3d.info.debug=true\n");
-    loggingFilter += QStringLiteral("qt.canvas3d.rendering.debug=true\n")
-            + QStringLiteral("qt.canvas3d.rendering.warning=true\n")
-            + QStringLiteral("qt.canvas3d.glerrors.debug=true");
-    QLoggingCategory::setFilterRules(loggingFilter);
+    // Uncomment to turn on all the logging categories of Canvas3D
+//    QString loggingFilter = QString("qt.canvas3d.info.debug=true\n");
+//    loggingFilter += QStringLiteral("qt.canvas3d.rendering.debug=true\n")
+//            + QStringLiteral("qt.canvas3d.rendering.warning=true\n")
+//            + QStringLiteral("qt.canvas3d.glerrors.debug=true");
+//    QLoggingCategory::setFilterRules(loggingFilter);
     //! [0]
 
     QGuiApplication app(argc, argv);
